--- a/views/index.html
+++ b/views/index.html
@@ -7,31 +7,44 @@
   <link rel="stylesheet" type="text/css" href="../static/css/styles.css" />
 
   <script src="http://code.angularjs.org/1.2.9/angular.min.js"></script>
-  <script src="/node_modules/angular-google-maps/dist/angular-google-maps.min.js" type="text/javascript"></script>
-  <script src="/static/js/my_app.js"></script>
+  <!-- <script src="node_modules/angular-google-maps/angular-google-maps.js"></script> -->
+  <script src="../static/js/my_app.js"></script>
+
+  <script src="https://www.gstatic.com/firebasejs/3.6.1/firebase.js"></script>
+  <script>
+    // Initialize Firebase
+    var config = {
+      apiKey: "AIzaSyDtWkCxBMVrziS_hxagImZumHnMvTsfZcw",
+      authDomain: "map-project-a7a77.firebaseapp.com",
+      databaseURL: "https://map-project-a7a77.firebaseio.com",
+      storageBucket: "map-project-a7a77.appspot.com",
+      messagingSenderId: "731219849819"
+    };
+    firebase.initializeApp(config);
+  </script>
 </head>
 <body>
   <div ng-controller="myController">
 
     <div class="row">
-      <div class="col-md-8 col-md-offset-2 main-column">
+      <div class="col-md-10 col-md-offset-1 main-column">
         <div class="page-header">
           <h2>Welcome. You are Logged In as <%= username %></h2>
+
+          <a href="/logout">logout</a>
+          <a href="/user">Edit User</a>
+
+          <a href="/signup">Sign Up</a>
         </div>
 
-        <div id="map_canvas">
-          <ui-gmap-google-map center="map.center" zoom="map.zoom"></ui-gmap-google-map>
-        </div>
-
-        <a href="/logout">logout</a>
-        <a href="/user">Edit User</a>
-        <p>Place Your Code Here<p>
-
-
-
-        <a href="/signup">Sign Up</a>
         <hr><%= msg %>
-        <hr>Color <%= color %>
+
+
+        <div id="map"></div>
+        <script></script>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDtWkCxBMVrziS_hxagImZumHnMvTsfZcw&callback=initMap"
+        async defer></script>
+
       </div>
     </div>
   </div>
