--- a/views/user.html
+++ b/views/user.html
@@ -22,7 +22,7 @@
           <div class="row">
             <div class="col-sm-3">
               <p>Username: </p>
-              <p>Password: </p>
+              <p>Email: </p>
               <p>Favorite Color: </p>
             </div>
 
@@ -35,9 +35,8 @@
                      ng-model="user.color"><br>
             </div>
           </div>
-          <input type="submit" value="Register">
+          <input type="submit" value="Save">
         </form>
-        <input type="submit" value="Save">
 
         <hr><%= msg %>
 
@@ -55,4 +54,3 @@
 
 </body>
 </html>
-
