--- a/views/index.html
+++ b/views/index.html
@@ -1,7 +1,7 @@
-<!doctype html>
+<!DOCTYPE html>
 <html ng-app="myApp">
 <head>
-  <title>Main Page~~~</title>
+  <title>Map</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Francois+One|Open+Sans" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="../static/css/styles.css" />
@@ -25,20 +25,19 @@
 </head>
 <body>
   <div ng-controller="myController">
+    <div>
+      <nav class="col-sm-12 text-right" id="user-nav">
+        <a href="/logout">Log out</a>
+        <a href="/user">My Account</a>
+        <a href="/signup">Sign Up</a>
+      </nav><br>
+    </div>
 
     <div class="row">
       <div class="col-md-10 col-md-offset-1 main-column">
-        <div class="page-header">
-          <h2>Welcome. You are Logged In as <%= username %></h2>
-
-          <a href="/logout">logout</a>
-          <a href="/user">Edit User</a>
-
-          <a href="/signup">Sign Up</a>
-        </div>
-
-        <hr><%= msg %>
-
+        <br>
+        <h3>Welcome. You are Logged In as <%= username %></h3>
+        <h4>your locations: </h4>
 
         <div id="map"></div>
         <script></script>
@@ -50,3 +49,4 @@
   </div>
 </body>
 </html>
+
