Geocoding works, but we have a run condition problem when it comes to saving

--- a/views/user.html
+++ b/views/user.html
@@ -23,7 +23,7 @@
             <div class="col-sm-3">
               <p>Username: </p>
               <p>Password: </p>
-              <p>Favorite Color: </p>
+              <p>Location: </p>
             </div>
 
             <div class="col-sm-9">
@@ -31,8 +31,8 @@
                      ng-model="user.username" disabled><br>
               <input type="email" name="email"
                       ng-model="user.email"><br>
-              <input type="text" name="color"
-                     ng-model="user.color"><br>
+              <input type="text" name="locations"
+                     ng-model="user.locations"><br>
             </div>
           </div>
           <input type="submit" value="Register">
