--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -30,7 +30,16 @@ h2 {
 
 #map {
  height: 700px;
- width: 100%;
+ width: 70%;
+ float: left;
+}
+
+#sidebar {
+  min-height: 700px;
+  background-color: #dbdbdb;
+  width: 30%;
+  float: left;
+  padding: 0 12px 0 12px;
 }
 
 #user-nav {
