--- a/views/user.html
+++ b/views/user.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html ng-app="myApp">
 <head>
-  <title>Edit User</title>
+  <title>User Info</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <link href="https://fonts.googleapis.com/css?family=Francois+One|Open+Sans" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="../static/css/styles.css" />
@@ -15,15 +15,14 @@
     <div class="row">
       <div class="col-md-8 col-md-offset-2 main-column">
         <div class="page-header">
-          <h1>Edit user</h1>
+          <h1>User Info</h1>
         </div>
 
-        <form method="POST" action="/user/update">
+        <form>
           <div class="row">
             <div class="col-sm-3">
               <p>Username: </p>
               <p>Email: </p>
-              <p>Location: </p>
             </div>
 
             <div class="col-sm-9">
@@ -31,11 +30,8 @@
                      ng-model="user.username" disabled><br>
               <input type="email" name="email"
                       ng-model="user.email"><br>
-              <input type="text" name="locations"
-                     ng-model="user.locations"><br>
             </div>
           </div>
-          <input type="submit" value="Save">
         </form>
 
         <hr><%= msg %>
@@ -43,7 +39,7 @@
         <form method="POST" action="/user/delete">
           <input type="submit" value="Delete User">
         </form>
-        <hr><%= msg %>
+        <hr>
         <a href="/">Home</a>
 
 
