--- a/views/index.html
+++ b/views/index.html
@@ -49,7 +49,7 @@
 	                     ng-model="user.username">
 	              <input style="display:none;" type="email" name="email"
 	                      ng-model="user.email">
-	              <input type="text" name="locations" autocomplete="off" required><br>	  
+	              <input type="text" name="location" autocomplete="off" required><br>	  
 	          <input type="submit" value="Add to Map">
 	  </form>
 	  <hr>
